# advent-of-code

./: pyproject.toml
2024/day_01/: solution.py
2024/day_02/: README.md  solution.py
2024/day_03/: README.md  solution.py
2024/day_04/: README.md  solution.py
2024/day_05/: README.md  solution.py
2024/day_06/: README.md  solution.py
2024/day_07/: README.md  solution.py
2024/day_08/: README  solution.py
2024/one/: README.md  solution.py
