[project]
name = "advent-of-code"
description = "Advent of Code"
authors = [{name = "Andrew Ridyard", email = "ridyard12@gmail.com"}]
maintainers = [{name = "Andrew Ridyard", email = "ridyard12@example.com"}]
version = "0.0.1"
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers=[
    # 3 - Alpha | 4 - Beta | 5 - Production/Stable
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    # Python versions
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = []
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[project.urls]
Repository = "https://github.com/andyrids/advent-of-code"
Issues = "https://github.com/andyrids/advent-of-code/issues"

[tool.ruff]
exclude = []
indent-width = 4
line-length = 80

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint]
select = [
    "D1",  # pydocstyle
    "E",   # pycodestyle
    "ERA", # commented out code
    "I",   # isort
    "W",   # pycodestyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]